# content-automation

./: .dockerignore  .env.example  .gitignore  .vercelignore  BACKEND_ANALYSE.md  Dockerfile  README.md  app.py  cli.py  pyproject.toml  requirements.txt  run_campaign.py  test_campaign.py  test_render_upgraded.py  test_video_quality_comparison.py
agents/: __init__.py  analyst_agent.py  base_agent.py  brand_memory.py  caption_writer.py  idea_generator.py  market_researcher.py  realness_checker.py  script_writer.py  url_analyzer.py  viral_checker.py
analytics/: __init__.py  feedback_injector.py  learning_engine.py  metrics_store.py  models.py  normalizer.py  scorer.py
backend/: __init__.py  auth.py  constants.py  cost_guardrails.py  main.py  supabase.py
configs/: app_registry.json  channel_config.json  cost_limits.json  model_config.json
deployment/: setup_windows.bat  start_autonomous.bat  start_system.bat
desktop/: app.py  main.py  requirements_desktop.txt
experiments/: __init__.py  experiment_store.py  models.py  variant_generator.py
frontend/: index.html
maturity/: __init__.py  evaluator.py  metrics_engine.py  models.py  report_generator.py  scorecard.py
observability/: __init__.py  alerting.py  audit_store.py  correlation.py  decorators.py  health_checker.py  logger.py  models.py  retry_engine.py
quality/: benchmarker.py  models.py  scorer.py
scripts/: bootstrap_supabase.py  bootstrap_supabase_rest.py  get_tiktok_token.py  migrate_to_sqlite.py  verify_and_test.py
supabase/: reset.sql  schema.sql  setup.sql  storage.sql
tests/: conftest.py
(+146 files in other folders)
